sfa/_sass/_pwc.scss
/*h1, h2 {
	font-family: Georgia, serif;
}*/


.js-hide-slide{
    position: relative;
    width: 100%;
    /*top: 100px;*/
    /*left: 100%;*/
    transition: all ease .8s;
    opacity: 0;
    height: 0;
    overflow: hidden;
}

.js-hide-slide.active{
	/*top: 100px;*/
    left: 0;
    height: 400px;
    opacity: 1;
}

/*tagline*/

.sm-hidden{
	display: none;
}

#tagline{
	width: 100%;
	background: #000;
	color: #FFF;
	font-style: italic;
	padding: 20px;
	p{
		font-size: 16px;
		margin: 0;
		font-family: $pwc-font; 
		margin-top: 83px;
	}
}


/*welcome section*/

#welcome{
	h1{
		padding: 60px 20px 60px;
	}
	p {
		padding: 0;
	}
}


.bg-dark-trans{
	background: rgba(0,0,0,0.6);
	width: 100%;
	padding: 20px;

	h1{
		font-size: 28px;
		padding: 0;
	}
	p{
		width: 100%;
		padding: 0;
	}
}




/*industries section*/

#industries{
	padding: 0 20px;
	h2{
		padding: 60px 0;
	}
}

/*what-we-do section*/

#what-we-do{
	padding: 0px;

	h2{
		padding: 30px 20px;
	}
	/*.bg-dark-trans {
		background: rgba(0, 0, 0, 0.7);
	}*/
}

/*how we work section*/

#how-we-work {
	padding: 20px;

	h2 {
		padding: 30px 0;
	}

	ol {
		padding-left: 20px;
	}
}

/*team section*/

#team {
	padding: 20px;
	h2{
		padding: 0 0 40px 0;
	}

	section.team-head{
		text-align: center;
		padding: 20px 0;

		&:hover {
			.team-img-arrow {
				background-color: $pwc-color;
			}
			h1 {
				color: $pwc-color;
			}
		}
		h1{
			padding: 30px 20px 0;
			font-size: 24px;
			font-family: $base-font-family;
			font-weight: 500;
		}
		h2{
			padding: 0 20px 10px;
			font-size: 18px;
			font-family: $base-font-family;
			font-weight: 200;
		}
		.team-img{
			/*background: #333;*/
			border-radius: 50%;
			display: block;
			/*width: 80%;
			max-width: 180px;*/
			width: 180px;
			height: 180px;
			margin: 0 auto;

			position: relative;

			background-repeat: no-repeat;
			background-size: cover;
		}

		.team-img-arrow {
			background-color: #939598;
			height: 40px;
			width: 40px;
			border-radius: 50%;
			display: table-cell;
			vertical-align: middle;
			transition: all .2s ease;
			position: absolute;
			bottom: 0;
			right: 0;

			&:before {
				font-family: FontAwesome;
				content: "\F054";
				color: white;
				font-size: 1em;
				line-height: 40px;
			}

			&:hover {
				background-color: $pwc-color;
			}
			
		}

		.team-details-mob {
			text-align: left;
			display: none;
		}
	}

	section.team-head.active {
		h1 {
			color: $pwc-color;
		}

		.team-img-arrow {
			background-color: $pwc-color;

			&:before{
				content: "\F078";
			}
		}

		/*$('.active h1').css('color', '$pwc-color');
		$('.active .team-img-arrow').css('background-color', '$pwc-color');*/
	}

	.team-img {
		background-color: #fff;
	}

	.slide-0 .team-img {
		background-image: url(/img/about-us-sara-crop.jpg);
		background-position: 0px -10px;
	}
	.slide-1 .team-img {
		background-image: url(/img/about-us-kasia-crop.jpg);
		background-position: 0px 10px;
	}
	.slide-2 .team-img {
		background-image: url(/img/about-us-philip-crop.jpg);
		background-position: 0px -10px;
	}
	.slide-3 .team-img {
		background-image: url(/img/about-us-tim-crop.jpg);
		background-position: 0px -5px;
	}
	.slide-4 .team-img {
		background-image: url(/img/about-us-iain-crop.jpg);
		background-position: 5px 10px;
	}

}



#team section.team-details{
	display: none;

	h1 {
		color: $pwc-color;
	}

}



/* Subscribe */

#subscribe {

	padding: 0 20px;

	h2 {
		padding: 30px 0;
	}

	section {
		padding-bottom: 30px;
	}
}


/* Links */

#links {
	padding: 0 20px;

	h2 {
		padding: 30px 0;
	}

	ul {
		margin: 0 0 0 16px;
		padding: 0 0 30px 0;
	}

	a {
		color: $pwc-color
	}
}


/* Footer */

.bg-footer {
	background-color: #404041;
	height: auto;
	display: block;
	width: 100%;
	padding: 0 20px;

	ul {
		margin: 0 auto;
		text-align: center;
	}

	li {
		list-style: none;
		padding: 0 2% 0 0;
		display: inline-block;

		&:last-child {
			color: #e7e7e8;;
		}
	}

	a {
		color: #e7e7e8;
	}

	#logo {

		text-align: center;

		img {
			height: 100px;
			width: auto;
			padding: 20px;
			margin: 0 auto;
			display: block;

			&:last-of-type {
				padding-bottom: 40px;
				height: 140px;
			}
		}
	}
}

.footer-list {


	li {
		font-size: 0.8em;
		/*float: left;*/

		&:last-of-type {
			/*float: right;*/
		}
	}
}

.col-right {
	color: $footer-color;
	text-align: left;
	font-size: 0.8em;
}

.col-right > p {
	padding-top: 10px;
}


/* Form */

.checkbox-list {
	margin: 0;
	margin-bottom: 20px;
	padding: 0;
	list-style: none;
	

	li {
		width: 100%;
	}
}


input {
	font-family: inherit;
}


input[type=text],
input[type=email] {
	display: block;
	margin: 10px 0;
	width: 100%;
	padding: 8px;
	border: 3px solid #c7c8ca;
	border-radius: 5px;
}

/*input[type=submit] {
	font-family: $base-font-family;
	font-size: 1em;
	color: white;
	background-color: $pwc-color;
	padding: 15px 30px;
	border-radius: 5px;
	border: none;

	&:disabled {
		background-color: lighten($pwc-color, 40%);
	}
}*/

a.button {
	color: white;
	background-color: $pwc-color;
	padding: 10px 20px;
	border-radius: 5px;

	&:hover {
		text-decoration:none;
	}
}

form a.disableClick {
	pointer-events: none;
	background-color: lighten($pwc-color, 30%);
}

.errorText, .errorInterest, .errorPosition {
	color: red;
	display: none;
}


/* FORM Success Bar */

.success {
    background-color: $pwc-color;
    height: auto;
    width: 100%;
    display: none;

    #success-bar {
    	color: #fff;
    	line-height: auto;
    	padding: 30px 20px;

    	p {

    	}

    	a {
    		color: #fff;
    	}
    }
}

/* Columns */


#team-col-left {
	display: none;
}


.bg-color {
    background-color: #e7e7e8;
    height: auto;
    width: 100%;
    display: block;
}



/*.bg-color#team {
	background-color: #e7e7e8;
}*/


/* IMAGES */

.bg-image#welcome {
	background-image: url(/img/bg-image-welcome-overlay.png), url(/img/bg-image-welcome.jpg);

}

.bg-image#what-we-do {
	background-image: url(/img/bg-image-sso.jpg);
}


/* TIMELINE */

.timeline-bar {
	list-style: none;
	padding: 0;

	li {
		padding: 20px;
		width: 100%;
		margin-bottom: 30px;

		background-color: #fff;

		&:hover {

		}
	}

	li:nth-child(1) {

		/*border: 5px solid $footer-color;*/
		border-top: 50px solid #EB8C00;
	}
	li:nth-child(2) {
		border-top: 50px solid #DC6900;
	}
	li:nth-child(3) {
		border-top: 50px solid #E0301E;
	}
	li:nth-child(4) {
		border-top: 50px solid #DB536A;
		margin-bottom: 10px;
	}

	.absolute-number {
		position: relative;
		background-color: $pwc-color;
		height: 60px;
		width: 60px;
		border-radius: 50%;
		line-height: 60px;

		text-align: center;
		margin-top: -60px;
		margin-left: -35px;
		/*font-family: $pwc-font;*/
		font-size: 1.5em;
		color: white;
		font-weight: bold;
	}
}

